--- a/data-structures/data-structures.csproj
+++ b/data-structures/data-structures.csproj
@@ -8,4 +8,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="lessons\sorts" />
+    </ItemGroup>
+
 </Project>
