--- a/data-structures/data-structures.csproj
+++ b/data-structures/data-structures.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="lessons\sorts" />
+      <Folder Include="sorts" />
     </ItemGroup>
 
 </Project>
